--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@stripe/stripe-js": "^7.8.0",
     "axios": "^1.11.0",
+    "jspdf": "^4.0.0",
+    "jspdf-autotable": "^5.0.7",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
